tests/diagnostic_golden/semantic_ambiguous_interfaces_multi.diag
error[CF3116]: Ambiguous interfaces
  --> tests/diagnostic_golden/semantic_ambiguous_interfaces_multi.f90:5:1
   = stage: semantic
   = help: see docs/errors.md#CF3116
  |
5 |     module procedure sub_c
  | ^ ambiguous specific here
  ::: tests/diagnostic_golden\semantic_ambiguous_interfaces_multi.f90:3:1
  |
3 |     module procedure sub_a
  | ~ conflicting specific here
  ::: tests/diagnostic_golden\semantic_ambiguous_interfaces_multi.f90:4:1
  |
4 |     module procedure sub_b
  | ~ conflicting specific here
   = note: generic interface specifics must be distinguishable by their required dummy arguments
   = help: change one specific's required dummy argument characteristics or split the generic interface
